--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radui-mcp",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "type": "module",
   "bin": {
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.0",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "node-fetch": "^3.3.2",
     "zod": "^3.25.36"
   },
   "keywords": [],
