--- a/docs/package.json
+++ b/docs/package.json
@@ -2,15 +2,20 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "rimraf .next && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
     "update-rad": "pnpm i @radui/ui@latest",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "mcp": "node ./utils/mcp.js",
+    "mcp:run": "node ./utils/mcp.js run"
   },
   "dependencies": {
+    "@babel/parser": "^7.25.8",
+    "@babel/traverse": "^7.25.7",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.2.0",
